Temporarily disable auto-deploy for 22 hours

--- a/vercel.json
+++ b/vercel.json
@@ -18,9 +18,14 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
+          "value": "public, max-age=79200, must-revalidate"
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "app/api/disable-deploy.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
